add post and delete for wishlist and update prisma

--- a/extensions/wishlist-icon/blocks/star_rating.liquid
+++ b/extensions/wishlist-icon/blocks/star_rating.liquid
@@ -1,5 +1,5 @@
 <div class="wishlist-inspire__icon" x-data="wishlist">
-  <button type="button" @click="addToWishList()">
+  <button type="button" @click.debounce="addToWishList()">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" :fill="wishlisted ? 'red' : '#fff' " stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
       <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
     </svg>
@@ -14,8 +14,20 @@
 <script>
   document.addEventListener('alpine:init', () => {
       Alpine.data('wishlist', () => ({
+          init() {
+            // Check if product is already in wishlist
+            fetch(this.appUrl + "/api/wishlist?customerId={{ customer.id }}&productId={{ product.id }}&shop={{ shop.permanent_domain }}")
+              .then((response) => response.json())
+              .then((result) => {
+                console.log(result);
+                if (result.ok && result.data.length > 0) {
+                  this.wishlisted = true;
+                }
+              })
+              .catch((error) => console.error(error));
+          },
           wishlisted: false,
-          appUrl: "https://implemented-lm-veterans-incomplete.trycloudflare.com",
+          appUrl: "https://toshiba-milwaukee-worthy-baltimore.trycloudflare.com",
           addToWishList() {
             // If customer is not logged in, show an alert to login
             {% unless customer %}
@@ -24,10 +36,18 @@
             {% endunless %}
 
             // TODO: send data to database
-            const formdata = new FormData();
+            let formdata = new FormData();
             formdata.append("customerId", "{{ customer.id }}");
             formdata.append("productId", "{{ product.id }}");
             formdata.append("shop", "{{ shop.permanent_domain }}");
+
+            if (this.wishlisted) {
+              this.wishlisted = false;
+              formdata.append("_action", "DELETE");
+            } else {
+              this.wishlisted = true;
+              formdata.append("_action", "CREATE");
+            }
 
             const requestOptions = {
               method: "POST",
@@ -36,8 +56,15 @@
             };
 
             fetch(this.appUrl + "/api/wishlist", requestOptions)
-              .then((response) => response.text())
-              .then((result) => this.wishlisted = ! this.wishlisted)
+              .then((response) => response.json())
+              .then((result) => {
+                console.log(result);
+                if(result.wishlisted){
+                  this.wishlisted = true;
+                }else{
+                  this.wishlisted = false;
+                }
+              })
               .catch((error) => console.error(error));
 
           }
